// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TS compilation flags Path to TSC is specified 1`] = `
Object {
  "codemod/index.ts": "import {Codemod} from '@nick.heiner/jscodemod';

// Compiling this will not work automatically, because no TSC will be found.

const codemod: Codemod = {
  transform({source}) {
    return \`/* prefix no-tsc */\\\\n\${source}\`;
  }
};

export default codemod;",
  "input.js": "/* prefix no-tsc */
module.exports = {
  input: 'file'
};",
}
`;

exports[`TS compilation flags Specified tsconfig path 1`] = `
Object {
  "codemod/index.ts": "import {Codemod} from '@nick.heiner/jscodemod';

// Compiling this will not work, because no TSC will be found.

const codemod: Codemod = {
  transform({source}) {
    return \`/* prefix tsconfig-non-standard-location */\\\\n\${source}\`;
  }
};

export default codemod;",
  "configs/tsconfig.json": "{
  \\"include\\": [\\"../codemod/*.ts\\"],

  \\"compilerOptions\\": {
    \\"target\\": \\"ES2019\\",
    \\"module\\": \\"commonjs\\",
    \\"strict\\": true,

    \\"rootDir\\": \\"..\\",

    \\"outDir\\": \\"should-be-ignored\\",
    
    \\"noUnusedLocals\\": true,
    \\"noUnusedParameters\\": true,
    \\"noImplicitReturns\\": true, 
    \\"noFallthroughCasesInSwitch\\": true,

    \\"moduleResolution\\": \\"node\\",
    \\"esModuleInterop\\": true,

    \\"skipLibCheck\\": true,
    \\"forceConsistentCasingInFileNames\\": true
  }
}
",
  "input.js": "/* prefix tsconfig-non-standard-location */
const file = 'asdf';",
}
`;

exports[`error handling handles codemod codemod-unnamed.js (codemod-unnamed.js) throwing an error 1`] = `
Object {
  "codemod/codemod-named.js": "module.exports = {
  name: 'my-codemod-name',
  transform({filePath}) {
    throw new Error(\`Error for: \${filePath}\`);
  }
};",
  "codemod/codemod-unnamed.js": "module.exports = {
  transform({filePath}) {
    throw new Error(\`Error for: \${filePath}\`);
  }
};",
  "source/a.js": "console.log('a');",
  "source/b.js": "console.log('b');",
}
`;

exports[`error handling handles codemod my-codemod-name (codemod-named.js) throwing an error 1`] = `
Object {
  "codemod/codemod-named.js": "module.exports = {
  name: 'my-codemod-name',
  transform({filePath}) {
    throw new Error(\`Error for: \${filePath}\`);
  }
};",
  "codemod/codemod-unnamed.js": "module.exports = {
  transform({filePath}) {
    throw new Error(\`Error for: \${filePath}\`);
  }
};",
  "source/a.js": "console.log('a');",
  "source/b.js": "console.log('b');",
}
`;

exports[`error handling missing required argument to codemod 1`] = `
"Options:
      --version       Show version number                              [boolean]
  -r, --requiredFlag  This arg is required                   [string] [required]
      --help          Show help                                        [boolean]

Missing required argument: requiredFlag
The codemod's parseArgs method called process.exit(). This probably means the arguments you passed to it didn't validate. To pass arguments to a codemod, put them at the end of the whole command, like 'jscodemod -c codemod.js fileGlob -- -a b'."
`;

exports[`getTransformedContentsOfSingleFile processes codemod ignored files 1`] = `
"/* prefix prepend string */
// codemod ignored"
`;

exports[`getTransformedContentsOfSingleFile processes ignorefile ignored files 1`] = `"transformed"`;

exports[`getTransformedContentsOfSingleFile returns the contents of a single file 1`] = `
"/* prefix prepend string */
function b() {}"
`;

exports[`getTransformedContentsOfSingleFile throws an error if the codemod throws an error 1`] = `"Cannot find module '../fixtures/will-throw-error/codemod-named.js' from '__tests__/index.ts'"`;

exports[`git Modify dirty files 1`] = `
Object {
  "codemod/codemod.js": "module.exports = {
  ignore: 'dirty-transformed-by-second-codemod',
  transform({source}) {
    return \`/* prefix git dirty */\\\\n\${source}\`;
  },
  async postProcess(modifiedFiles, {jscodemod}) {
    console.log(JSON.stringify({modifiedFiles}));
    await jscodemod(
      require.resolve('./second-codemod'),
      require.resolve('../source/dirty-transformed-by-second-codemod'),
    )
  }
};",
  "codemod/second-codemod.js": "module.exports = {
  transform({source}) {
    return \`/* prefix git dirty second codemod */\\\\n\${source}\`;
  }
};",
  "git-ignored.js": "console.log('git ignored');
",
  "git-untracked.js": "// git untracked",
  "source/dirty-transformed-by-second-codemod.js": "/* prefix git dirty second codemod */
// Transformed by second codemod
const y = 'dirty state';",
  "source/dirty.js": "/* prefix git dirty */
const x = 'dirty state';",
  "source/nested-git-ignored.js": "console.log('nested git ignored');",
  "source/unmodified.js": "/* prefix git dirty */
const x = 'starting state';",
}
`;

exports[`git Reset dirty files 1`] = `
Object {
  "codemod/codemod.js": "module.exports = {
  ignore: 'dirty-transformed-by-second-codemod',
  transform({source}) {
    return \`/* prefix git dirty */\\\\n\${source}\`;
  },
  async postProcess(modifiedFiles, {jscodemod}) {
    console.log(JSON.stringify({modifiedFiles}));
    await jscodemod(
      require.resolve('./second-codemod'),
      require.resolve('../source/dirty-transformed-by-second-codemod'),
    )
  }
};",
  "codemod/second-codemod.js": "module.exports = {
  transform({source}) {
    return \`/* prefix git dirty second codemod */\\\\n\${source}\`;
  }
};",
  "git-ignored.js": "console.log('git ignored');
",
  "git-untracked.js": "// git untracked",
  "source/dirty-transformed-by-second-codemod.js": "/* prefix git dirty second codemod */
// Transformed by second codemod
const y = 'starting state';",
  "source/dirty.js": "/* prefix git dirty */
const x = 'starting state';",
  "source/nested-git-ignored.js": "console.log('nested git ignored');",
  "source/unmodified.js": "/* prefix git dirty */
const x = 'starting state';",
}
`;

exports[`happy path TS without manually specifying any of the args determining how to compile 1`] = `
Object {
  "codemod/index.ts": "import {Codemod} from '@nick.heiner/jscodemod';
import _ from 'lodash';
import * as BabelTypes from '@babel/types';
import type {Visitor} from '@babel/traverse';

// TODO is our intentional any type.
// eslint-disable-next-line @typescript-eslint/no-explicit-any
export type TODO = any;

const codemod: Codemod = {
  getPlugin: ({willNotifyOnAstChange, astDidChange}) => {
    if (process.env.CALL_WILL_NOTIFY_ON_AST_CHANGE) {
      willNotifyOnAstChange();
    }

    return ({types: t}: {types: typeof BabelTypes}): {visitor: Visitor<TODO>} => 
      ({
        visitor: {
          ArrowFunctionExpression(path) {
            if (t.isBlockStatement(path.node.body) && path.node.body.body.length === 1 &&
                  t.isReturnStatement(path.node.body.body[0])) {

              if (process.env.CALL_AST_DID_CHANGE) {
                astDidChange();
              }
    
              // I'm confident that this value will not be null, based on the runtime checks above.
              // eslint-disable-next-line @typescript-eslint/no-non-null-assertion
              path.get('body').replaceWith(path.node.body.body[0].argument!);  
            }
          }
        }
      });
  },
  presets: ['@babel/preset-react', '@babel/preset-typescript', '@babel/preset-env']
};

export default codemod;",
  "source/commented-out.js": "// const g = a => {
//   return a?.b?.c?.d
// };",
  "source/optional-chaining.js": "const g = a => a?.b?.c?.d;


const C = <img />;
const Empty = <div></div>;
",
  "source/recast-oddities.js": "#!/usr/bin/env node

const y = 1;

let x = 1;/* trailing comment */

/**
 * I was previously seeing issues where this would transform \`return (\\\\n expr \\\\n)\` to \`return expr\`, but I'm not seeing
 * that any more.
 */
function f() {
  return (
    true || false
  )
}

// Will be erroneously transformed because of https://github.com/benjamn/recast/issues/914.
const e = () => (function(g, h) {
  return i;
});",
  "source/ts.ts": "function g(
  a: string,
  b: number,
  c: boolean
) {
  return 0;
}

const f = () => 1;",
}
`;

exports[`happy path dry 1`] = `
Object {
  "codemod/codemod.js": "module.exports = {
  ignore: [
    /codemod-ignored/,
    'omitted-via-string-pattern'
  ],
  postProcess: modifiedFiles => {
    console.log('codemod post process', JSON.stringify(modifiedFiles));
  },
  parseArgs: rawCommandLineArgs => ({rawCommandLineArgs}),
  transform({source, commandLineArgs}) {
    console.log('commandLineArgs', JSON.stringify(commandLineArgs));
    return \`/* prefix prepend string */\\\\n\${source}\`;
  }
};",
  "codemod/jscodeshift-codemod.js": "module.exports = ({source}) => \`/* prefix */\\\\n\${source}\`;",
  "source/a.js": "console.log('a');",
  "source/b.js": "function b() {}",
  "source/blank.js": "",
  "source/codemod-ignored.js": "// codemod ignored",
  "source/codemod-omitted-via-string-pattern.js": "// codemod ignored",
}
`;

exports[`happy path dry porcelain 1`] = `
Object {
  "codemod/codemod.js": "module.exports = {
  ignore: [
    /codemod-ignored/,
    'omitted-via-string-pattern'
  ],
  postProcess: modifiedFiles => {
    console.log('codemod post process', JSON.stringify(modifiedFiles));
  },
  parseArgs: rawCommandLineArgs => ({rawCommandLineArgs}),
  transform({source, commandLineArgs}) {
    console.log('commandLineArgs', JSON.stringify(commandLineArgs));
    return \`/* prefix prepend string */\\\\n\${source}\`;
  }
};",
  "codemod/jscodeshift-codemod.js": "module.exports = ({source}) => \`/* prefix */\\\\n\${source}\`;",
  "source/a.js": "console.log('a');",
  "source/b.js": "function b() {}",
  "source/blank.js": "",
  "source/codemod-ignored.js": "// codemod ignored",
  "source/codemod-omitted-via-string-pattern.js": "// codemod ignored",
}
`;

exports[`happy path dry porcelain 2`] = `
"<test-dir>/source/.dotfile.js
<test-dir>/source/a.js
<test-dir>/source/b.js
<test-dir>/source/blank.js"
`;

exports[`happy path getPlugin calls astDidChange() but forgot to call willNotifyOnAstChange() 1`] = `
Object {
  "codemod/index.ts": "import {Codemod} from '@nick.heiner/jscodemod';
import _ from 'lodash';
import * as BabelTypes from '@babel/types';
import type {Visitor} from '@babel/traverse';

// TODO is our intentional any type.
// eslint-disable-next-line @typescript-eslint/no-explicit-any
export type TODO = any;

const codemod: Codemod = {
  getPlugin: ({willNotifyOnAstChange, astDidChange}) => {
    if (process.env.CALL_WILL_NOTIFY_ON_AST_CHANGE) {
      willNotifyOnAstChange();
    }

    return ({types: t}: {types: typeof BabelTypes}): {visitor: Visitor<TODO>} => 
      ({
        visitor: {
          ArrowFunctionExpression(path) {
            if (t.isBlockStatement(path.node.body) && path.node.body.body.length === 1 &&
                  t.isReturnStatement(path.node.body.body[0])) {

              if (process.env.CALL_AST_DID_CHANGE) {
                astDidChange();
              }
    
              // I'm confident that this value will not be null, based on the runtime checks above.
              // eslint-disable-next-line @typescript-eslint/no-non-null-assertion
              path.get('body').replaceWith(path.node.body.body[0].argument!);  
            }
          }
        }
      });
  },
  presets: ['@babel/preset-react', '@babel/preset-typescript', '@babel/preset-env']
};

export default codemod;",
  "source/commented-out.js": "// const g = a => {
//   return a?.b?.c?.d
// };",
  "source/optional-chaining.js": "const g = a => {
  return a?.b?.c?.d
};


const C = <img />;
const Empty = <div></div>;
",
  "source/recast-oddities.js": "#!/usr/bin/env node

const y = 1;

let x = 1; /* trailing comment */

/**
 * I was previously seeing issues where this would transform \`return (\\\\n expr \\\\n)\` to \`return expr\`, but I'm not seeing
 * that any more.
 */
function f() {
  return (
    true || false
  )
}

// Will be erroneously transformed because of https://github.com/benjamn/recast/issues/914.
const e = () => function(g, h) {
  return i;
};",
  "source/ts.ts": "function g(
  a: string,
  b: number,
  c: boolean
) {
  return 0;
}

const f = () => {
  return 1
};",
}
`;

exports[`happy path getPlugin uses the willNotifyOnAstChange API 1`] = `
Object {
  "codemod/index.ts": "import {Codemod} from '@nick.heiner/jscodemod';
import _ from 'lodash';
import * as BabelTypes from '@babel/types';
import type {Visitor} from '@babel/traverse';

// TODO is our intentional any type.
// eslint-disable-next-line @typescript-eslint/no-explicit-any
export type TODO = any;

const codemod: Codemod = {
  getPlugin: ({willNotifyOnAstChange, astDidChange}) => {
    if (process.env.CALL_WILL_NOTIFY_ON_AST_CHANGE) {
      willNotifyOnAstChange();
    }

    return ({types: t}: {types: typeof BabelTypes}): {visitor: Visitor<TODO>} => 
      ({
        visitor: {
          ArrowFunctionExpression(path) {
            if (t.isBlockStatement(path.node.body) && path.node.body.body.length === 1 &&
                  t.isReturnStatement(path.node.body.body[0])) {

              if (process.env.CALL_AST_DID_CHANGE) {
                astDidChange();
              }
    
              // I'm confident that this value will not be null, based on the runtime checks above.
              // eslint-disable-next-line @typescript-eslint/no-non-null-assertion
              path.get('body').replaceWith(path.node.body.body[0].argument!);  
            }
          }
        }
      });
  },
  presets: ['@babel/preset-react', '@babel/preset-typescript', '@babel/preset-env']
};

export default codemod;",
  "source/commented-out.js": "// const g = a => {
//   return a?.b?.c?.d
// };",
  "source/optional-chaining.js": "const g = a => {
  return a?.b?.c?.d
};


const C = <img />;
const Empty = <div></div>;
",
  "source/recast-oddities.js": "#!/usr/bin/env node

const y = 1;

let x = 1; /* trailing comment */

/**
 * I was previously seeing issues where this would transform \`return (\\\\n expr \\\\n)\` to \`return expr\`, but I'm not seeing
 * that any more.
 */
function f() {
  return (
    true || false
  )
}

// Will be erroneously transformed because of https://github.com/benjamn/recast/issues/914.
const e = () => function(g, h) {
  return i;
};",
  "source/ts.ts": "function g(
  a: string,
  b: number,
  c: boolean
) {
  return 0;
}

const f = () => {
  return 1
};",
}
`;

exports[`happy path prepend-string 1`] = `
Object {
  "codemod/codemod.js": "module.exports = {
  ignore: [
    /codemod-ignored/,
    'omitted-via-string-pattern'
  ],
  postProcess: modifiedFiles => {
    console.log('codemod post process', JSON.stringify(modifiedFiles));
  },
  parseArgs: rawCommandLineArgs => ({rawCommandLineArgs}),
  transform({source, commandLineArgs}) {
    console.log('commandLineArgs', JSON.stringify(commandLineArgs));
    return \`/* prefix prepend string */\\\\n\${source}\`;
  }
};",
  "codemod/jscodeshift-codemod.js": "module.exports = ({source}) => \`/* prefix */\\\\n\${source}\`;",
  "source/a.js": "/* prefix prepend string */
console.log('a');",
  "source/b.js": "/* prefix prepend string */
function b() {}",
  "source/blank.js": "/* prefix prepend string */
",
  "source/codemod-ignored.js": "// codemod ignored",
  "source/codemod-omitted-via-string-pattern.js": "// codemod ignored",
}
`;

exports[`happy path prepend-string 2`] = `"codemod post process [\\"<test-dir>/source/.dotfile.js\\",\\"<test-dir>/source/a.js\\",\\"<test-dir>/source/b.js\\",\\"<test-dir>/source/blank.js\\"]"`;

exports[`happy path prepend-string 3`] = `"commandLineArgs {}"`;

exports[`ignore files happy path 1`] = `
Object {
  "codemod-missing-ignore-file.js": "module.exports = {
  transform() { 
    return 'transformed';
  },
  ignoreFiles: ['does-not-exist.ignore']
};",
  "codemod.js": "const path = require('path');

module.exports = {
  transform() { 
    return 'transformed';
  },
  ignoreFiles: [path.resolve(__dirname, 'root.ignore'), path.resolve(__dirname, 'dir-1/nested.ignore')]
};",
  "dir-1/dir-2/ignored-by-nested.txt": "",
  "dir-1/dir-2/ignored-by-root.txt": "",
  "dir-1/dir-2/transformed.txt": "transformed",
  "dir-1/ignored-by-nested.txt": "",
  "dir-1/ignored-by-root.txt": "",
  "dir-1/nested.ignore": "../ignored-by-nested.txt
ignored-by-nested.txt
dir-2/ignored-by-nested.txt",
  "dir-1/transformed.txt": "transformed",
  "ignored-by-nested.txt": "",
  "ignored-by-root.txt": "",
  "root.ignore": "ignored-by-root.txt
dir-1/ignored-by-root.txt
dir-1/dir-2/ignored-by-root.txt",
  "transformed.txt": "transformed",
}
`;
